--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 
     <header id="top" class="header-home">
       <div class="brand-panel">
-       <a href="#top" class="brand js-target-scroll">
-          Story<span class="text-primary">X</span>
+       <a href="index.html">
+        <img alt="" class="img-responsive" src="img/logo.png">
         </a>
-        <div class="brand-name">StoryX</div>
+        <div class="brand-name">ADC</div>
         <div class="slide-number">
           <span class="current-number text-primary">0<span class="count">1</span></span>
           <sup><span class="delimiter">/</span> 0<span class="total-count"></span></sup>
         </div>
       </div>
-      <div class="header-phone">+7 (212) 674-25-10</div>
+      <div class="header-phone">07540 544126</div>
       <div class="vertical-panel"></div>
       <div class="vertical-panel-content">
         <div class="vertical-panel-info">
@@ -101,17 +101,9 @@
                 </li>
               </ul>
             </li>  
+            
             <li>
-              <a href="blog.html">Blog</a>
-              <ul>
-                <li><a href="blog.html">Blog - List</a></li>
-                <li>
-                  <a href="blog-details.html">Blog - Post</a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="contacts.html">Contacts</a>
+              <a href="contacts.html">Contact</a>
             </li>
           </ul>
         </div>
