--- a/index.html
+++ b/index.html
@@ -323,13 +323,13 @@
       <section id="about" class="about section">
         <div class="container">
           <header class="section-header">
-            <h2 class="section-title">About <span class="text-primary">StoryX</span></h2>
+            <h2 class="section-title">About <span class="text-primary">ADCarpentry & Construction Ltd</span></h2>
             <strong class="fade-title-left">About</strong>
           </header>
           <div class="section-content">
             <div class="row-base row">
               <div class="col-base col-sm-6 col-md-4">
-                <h3 class="col-about-title">we turn ideas into works of art<span class="text-primary">.</span></h3>
+                <h3 class="col-about-title">We turn ideas into works of art<span class="text-primary">.</span></h3>
                 <div class="col-about-info">
                   <p>Since 2009, ADCarpentry & Construction Ltd has been recognised as a top Carpentry & Building Contracting Company in Cornwall. We’ve provided clients with a wide range of contracting services for all their residential and holiday property needs. Whether you want to renovate your existing space or have a construction project you’d like to get off the ground, our contracting professionals work to bring your dreams to life. Contact us to receive a free estimate today.</p>
                 </div>
