--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       </div>
     </div>
     <div class="header-phone">07540 544126</div>
-    <div class="vertical-panel"></div>
+    <div class="vertical-panel">
     <div class="vertical-panel-content">
       <div class="vertical-panel-info">
-        <div class="vertical-panel-title">ADCarpentry & Construction Ltd</div>
+        <div class="vertical-panel-title">ADCarpentry</div>
         <div class="line"></div>
       </div>
       <ul class="social-list">
