--- a/index.html
+++ b/index.html
@@ -60,43 +60,47 @@
         <sup><span class="delimiter">/</span> 0<span class="total-count"></span></sup>
       </div>
     </div>
-    <div class="header-phone">+7 (212) 674-25-10</div>
-      <div class="vertical-panel"></div>
-      <div class="vertical-panel-content">
-        <div class="vertical-panel-info">
-            <div class="vertical-panel-title">Architecture buro</div>
-            <div class="line"></div>
-         </div>
-        <ul class="social-list">
-          <li><a href="" class="fa fa-instagram"></a></li>
-          <li><a href="" class="fa fa-twitter"></a></li>
-          <li><a href="" class="fa fa-behance"></a></li>
-          <li><a href="" class="fa fa-facebook"></a></li>
-         </ul>  
-      </div> 
+    <div class="header-phone">07540 544126</div>
+    <div class="vertical-panel"></div>
+    <div class="vertical-panel-content">
+      <div class="vertical-panel-info">
+        <div class="vertical-panel-title">Architecture buro</div>
+        <div class="line"></div>
+      </div>
+      <ul class="social-list">
+        <li><a href="" class="fa fa-instagram"></a></li>
+        <li><a href="" class="fa fa-twitter"></a></li>
+        <li><a href="" class="fa fa-behance"></a></li>
+        <li><a href="" class="fa fa-facebook"></a></li>
+      </ul>
+    </div>
 
-      <!-- Navigation Desctop -->
+    <!-- Navigation Desctop -->
 
-      <nav class="navbar-desctop visible-md visible-lg">
-        <div class="container">
-          <a href="#top" class="brand js-target-scroll">
-            go<span class="text-primary">.</span>arch
-          </a>
-          <ul class="navbar-desctop-menu">
-            <li class="active">
-              <a href="index.html">Home</a>
-              
-            </li>
-            <li>
-              <a href="about.html">About us</a>
-            </li>
-            
-            <li>
-              <a href="contacts.html">Contacts</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+    <nav class="navbar-desctop visible-md visible-lg">
+      <div class="container">
+        <a href="index.html">
+          <img alt="" class="brand js-target-scroll" src="img/logo_sm.png">
+        </a>
+        <ul class="navbar-desctop-menu">
+          <li class="active">
+            <a href="index.html">Home</a>
+
+          </li>
+          <li>
+            <a href="about.html">About us</a>
+          </li>
+
+          <li>
+            <a href="projects.html">Projects</a>
+          </li>
+
+          <li>
+            <a href="contacts.html">Contacts</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
     <!-- Navigation Mobile -->
 
