--- a/index.html
+++ b/index.html
@@ -341,14 +341,14 @@
                 </div>
               </div>
               <div class="col-base col-about-spec col-sm-6 col-md-4">
-                <h3 class="col-about-title">our<br> specialization<span class="text-primary">:</span></h3>
+                <h3 class="col-about-title">our<br> specialisation<span class="text-primary">:</span></h3>
                 <div class="service-item">
                   <img alt="" width="46" src="img/img-icon/icon-architecture.png">
                   <h4>Carpentry</h4>
                 </div>
                 <div class="service-item">
                   <img alt="" width="58" src="img/img-icon/icon-interiors.png">
-                  <h4>Interiors</h4>
+                  <h4>Kitchens</h4>
                 </div>
                 <div class="service-item">
                   <img alt="" width="58" src="img/img-icon/icon-planing.png">
