--- a/index.html
+++ b/index.html
@@ -64,13 +64,12 @@
     <div class="vertical-panel"></div>
     <div class="vertical-panel-content">
       <div class="vertical-panel-info">
-        <div class="vertical-panel-title">Architecture buro</div>
+        <div class="vertical-panel-title">ADCarpentry & Construction Ltd</div>
         <div class="line"></div>
       </div>
       <ul class="social-list">
         <li><a href="" class="fa fa-instagram"></a></li>
-        <li><a href="" class="fa fa-twitter"></a></li>
-        <li><a href="" class="fa fa-behance"></a></li>
+       
         <li><a href="" class="fa fa-facebook"></a></li>
       </ul>
     </div>
@@ -83,20 +82,25 @@
           <img alt="" class="brand js-target-scroll" src="img/logo_sm.png">
         </a>
         <ul class="navbar-desctop-menu">
-          <li class="active">
+           <li>
             <a href="index.html">Home</a>
-
           </li>
           <li>
             <a href="about.html">About us</a>
           </li>
 
           <li>
+            <a href="services.html">Sevices</a>
+          </li>
+
+
+          <li>
             <a href="projects.html">Projects</a>
+
           </li>
 
           <li>
-            <a href="contacts.html">Contacts</a>
+            <a href="contacts.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -121,12 +125,18 @@
       <div class="collapse navbar-collapse" id="navbar-mobile">
         <ul class="navbar-nav-mobile">
 
-          <li class="active">
+           <li class="active">
             <a href="index.html">Home</a>
           </li>
           <li>
             <a href="about.html">About us</a>
           </li>
+
+          <li>
+            <a href="services.html">Sevices</a>
+          </li>
+
+
           <li>
             <a href="projects.html">Projects</a>
 
@@ -178,7 +188,7 @@
                 data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
                 data-mask_in="x:50px;y:0px;s:inherit;e:inherit;"
                 data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="500" data-splitin="chars"
-                data-splitout="none" data-responsive_offset="on" data-elementdelay="0.05">Concert hall in new york
+                data-splitout="none" data-responsive_offset="on" data-elementdelay="0.05">Bespoke, Quality Kitchens
               </div>
 
               <!-- Layer 2 -->
@@ -229,7 +239,7 @@
                 data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
                 data-mask_in="x:50px;y:0px;s:inherit;e:inherit;"
                 data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="500" data-splitin="chars"
-                data-splitout="none" data-responsive_offset="on" data-elementdelay="0.05">Exhibition center in boston
+                data-splitout="none" data-responsive_offset="on" data-elementdelay="0.05">Extentions and Remodelling
               </div>
 
 
@@ -282,7 +292,7 @@
                 data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
                 data-mask_in="x:50px;y:0px;s:inherit;e:inherit;"
                 data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="500" data-splitin="chars"
-                data-splitout="none" data-responsive_offset="on" data-elementdelay="0.05">Modern hotel in london
+                data-splitout="none" data-responsive_offset="on" data-elementdelay="0.05">Secure and Sustainable Windows and Doors
               </div>
 
 
