--- a/index2.html
+++ b/index2.html
@@ -62,7 +62,7 @@
       <div class="vertical-panel"></div>
       <div class="vertical-panel-content">
         <div class="vertical-panel-info">
-            <div class="vertical-panel-title">Architecture buro</div>
+            <div class="vertical-panel-title">ADCarpentry & Construction Ltd</div>
             <div class="line"></div>
          </div>
         <ul class="social-list">
