--- a/light/blog.html
+++ b/light/blog.html
@@ -298,32 +298,32 @@
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Get <span class="text-primary">in touch</span></h2>
+            <strong class="fade-title-right">contacts</strong>
           </header>
           <div class="section-content">
             <div class="row-base row">
               <div class="col-address col-base col-md-4">
-                +7 (212) 654-33-35<br>
-                +7 (212) 287-85-22<br>
-                info@goarch.com<br>
-                USA, New York, 57 Quigley Bridge
+                07540 544126<br>
+                info@adcarpentry-construction-ltd.co.uk<br>
+                52 Foster Drive, Bodmin, Cornwall, PL31 1PS
               </div>
               <div class="col-base  col-md-8">
                 <form class="js-ajax-form">
                   <div class="row-field row">
                     <div class="col-field col-sm-6 col-md-4">
                       <div class="form-group">
-                        <input type="text" class="form-control" name="name" placeholder="Name" autocomplete="off">
+                        <input type="text" class="form-control" name="name" placeholder="Name">
                       </div>
                       <div class="form-group">
-                        <input type="email" class="form-control" name="email" required placeholder="Email *" autocomplete="off">
+                        <input type="email" class="form-control" name="email" required placeholder="Email *">
                       </div>
                     </div>
                     <div class="col-field col-sm-6 col-md-4">
                       <div class="form-group">
-                        <input type="tel" class="form-control" name="phone" placeholder="Phone" autocomplete="off">
+                        <input type="tel" class="form-control" name="phone" placeholder="Phone">
                       </div>
                       <div class="form-group">
-                        <input type="text" class="form-control" name="company" placeholder="Company" autocomplete="off">
+                        <input type="text" class="form-control" name="company" placeholder="Company">
                       </div>
                     </div>
                     <div class="col-field col-sm-12 col-md-4">
@@ -333,12 +333,14 @@
                     </div>
                     <div class="col-message col-field col-sm-12">
                       <div class="form-group">
-                        <div class="success-message"><i class="fa fa-check text-primary"></i> Thank you!. Your message is successfully sent...</div>
+                        <div class="success-message"><i class="fa fa-check text-primary"></i> Thank you!. Your message
+                          is successfully sent...</div>
                         <div class="error-message">We're sorry, but something went wrong</div>
                       </div>
                     </div>
                   </div>
-                  <div class="form-submit text-right"><button class="btn btn-shadow-2 wow swing">Send <i class="icon-next"></i></button></div>
+                  <div class="form-submit text-right"><button type="submit" class="btn btn-shadow-2 wow swing">Send <i
+                        class="icon-next"></i></button></div>
                 </form>
               </div>
             </div>
