--- a/service-details.html
+++ b/service-details.html
@@ -1,169 +1,154 @@
 <!DOCTYPE HTML>
 <html lang="en">
+
 <head>
-<meta  charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>StoryX  - Architecture HTML Template</title> 
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>ADCarpentry & Construction Ltd</title>
 
-<!-- Favicons -->
-<link rel="shortcut icon" href="favicon.png">
-<link rel="apple-touch-icon" href="apple-touch-icon.png">
-<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
+  <!-- Favicons -->
+  <link rel="shortcut icon" href="favicon.png">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
 
-<!-- Styles -->
-<link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet" media="screen">
+  <!-- Styles -->
+  <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet" media="screen">
 </head>
-<body>
-  
-    <!-- Loader -->
 
-    <div class="loader">
-      <div class="page-lines">
-        <div class="container">
-          <div class="col-line col-xs-4">
-            <div class="line"></div>
-          </div>
-          <div class="col-line col-xs-4">
-            <div class="line"></div>
-          </div>
-          <div class="col-line col-xs-4">
-            <div class="line"></div>
-            <div class="line"></div>
-          </div>
+<body>
+
+  <!-- Loader -->
+
+  <div class="loader">
+    <div class="page-lines">
+      <div class="container">
+        <div class="col-line col-xs-4">
+          <div class="line"></div>
         </div>
-      </div>
-      <div class="loader-brand"> 
-        <div class="sk-folding-cube">
-          <div class="sk-cube1 sk-cube"></div>
-          <div class="sk-cube2 sk-cube"></div>
-          <div class="sk-cube4 sk-cube"></div>
-          <div class="sk-cube3 sk-cube"></div>
+        <div class="col-line col-xs-4">
+          <div class="line"></div>
+        </div>
+        <div class="col-line col-xs-4">
+          <div class="line"></div>
+          <div class="line"></div>
         </div>
       </div>
     </div>
-
-    <!-- Header -->
-
-    <header id="top" class="header-inner">
-      <div class="brand-panel">
-        <a href="#" class="brand">
-          Story<span class="text-primary">X</span>
-        </a>
-        <div class="brand-name">StoryX</div>
+    <div class="loader-brand">
+      <div class="sk-folding-cube">
+        <div class="sk-cube1 sk-cube"></div>
+        <div class="sk-cube2 sk-cube"></div>
+        <div class="sk-cube4 sk-cube"></div>
+        <div class="sk-cube3 sk-cube"></div>
       </div>
-      <div class="header-phone">+7 (212) 674-25-10</div>
-      <div class="vertical-panel-content">
-        <div class="vertical-panel-info">
-            <div class="line"></div>
-         </div>
-        <ul class="social-list">
-          <li><a href="" class="fa fa-instagram"></a></li>
-         
-          <li><a href="" class="fa fa-facebook"></a></li>
-         </ul>   
+    </div>
+  </div>
+
+  <!-- Header -->
+
+  <header id="top" class="header-home">
+    <div class="brand-panel">
+      <a href="index.html">
+        <img alt="" class="img-responsive" src="img/logo.png">
+      </a>
+      <div class="brand-name">ADC</div>
+      <div class="slide-number">
+        <span class="current-number text-primary">0<span class="count">1</span></span>
+        <sup><span class="delimiter">/</span> 0<span class="total-count"></span></sup>
       </div>
+    </div>
+    <div class="header-phone">07540 544126</div>
+    <div class="vertical-panel"></div>
+    <div class="vertical-panel-content">
+      <div class="vertical-panel-info">
+        <div class="vertical-panel-title">ADCarpentry & Construction Ltd</div>
+        <div class="line"></div>
+      </div>
+      <ul class="social-list">
+        <li><a href="" class="fa fa-instagram"></a></li>
+       
+        <li><a href="" class="fa fa-facebook"></a></li>
+      </ul>
+    </div>
 
-      <!-- Navigation Desctop -->
+    <!-- Navigation Desctop -->
 
-      <nav class="navbar-desctop visible-md visible-lg">
-        <div class="container">
-          <a href="#top" class="brand js-target-scroll">
-            Story<span class="text-primary">X</span>
-          </a>
-          <ul class="navbar-desctop-menu">
-            <li>
-              <a href="index.html">Home</a>
-              <ul>
-                <li><a href="../light/index.html">Home - Light</a></li>
-                <li>
-                  <a href="index.html">Home - Dark</a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="about.html">About us</a>
-            </li>
-            <li>
-              <a href="projects.html">Projects</a>
-              <ul>
-                <li><a href="projects.html">Projects - List</a></li>
-                <li>
-                  <a href="project.html">Project - details</a>
-                </li>
-              </ul>
-            </li>  
-            <li class="active">
-              <a href="blog.html">Blog</a>
-              <ul>
-                <li><a href="blog.html">Blog - List</a></li>
-                <li class="active">
-                  <a href="blog-details.html">Blog - Details</a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="contacts.html">Contacts</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-
-      <!-- Navigation Mobile -->
-
-      <nav class="navbar-mobile">
-       <a href="#top" class="brand js-target-scroll">
-          Story<span class="text-primary">X</span>
+    <nav class="navbar-desctop visible-md visible-lg">
+      <div class="container">
+        <a href="index.html">
+          <img alt="" class="brand js-target-scroll" src="img/logo_sm.png">
         </a>
+        <ul class="navbar-desctop-menu">
+           <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="about.html">About us</a>
+          </li>
 
-        <!-- Navbar Collapse -->
+          <li>
+            <a href="services.html">Sevices</a>
+          </li>
 
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-mobile">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
 
-        <div class="collapse navbar-collapse" id="navbar-mobile"> 
-          <ul class="navbar-nav-mobile">
-            <li>
-              <a href="#">Home <i class="fa fa-angle-down"></i></a>
-              <ul>
-                <li><a href="../light/index.html">Home - Light</a></li>
-                <li><a href="index.html">Home - Dark</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="about.html">About us</a>
-            </li>
-            <li>
-              <a href="#">Projects <i class="fa fa-angle-down"></i></a>
-              <ul>
-                <li><a href="projects.html">Projects - List</a></li>
-                <li>
-                  <a href="project.html">Project - details</a>
-                </li>
-              </ul>
-            </li>  
-            <li class="active">
-              <a href="#">Blog <i class="fa fa-angle-down"></i></a>
-              <ul>
-                <li><a href="blog.html">Blog - List</a></li>
-                <li class="active">
-                  <a href="blog-details.html">— Blog - Post</a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="contacts.html">Contacts</a>
-            </li>
-          </ul>
-        </div>
-      </nav> 
-    </header>
+          <li>
+            <a href="projects.html">Projects</a>
+
+          </li>
+
+          <li>
+            <a href="contacts.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- Navigation Mobile -->
+
+    <nav class="navbar-mobile">
+      <a href="index.html">
+        <img alt="" class="img-responsive" src="img/logo.png">
+      </a>
+
+      <!-- Navbar Collapse -->
+
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-mobile">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbar-mobile">
+        <ul class="navbar-nav-mobile">
+
+           <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="about.html">About us</a>
+          </li>
+
+          <li>
+            <a href="services.html">Sevices</a>
+          </li>
+
+
+          <li>
+            <a href="projects.html">Projects</a>
+
+          </li>
+
+          <li>
+            <a href="contacts.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
   <!-- Layout -->
 
@@ -291,21 +276,21 @@
 
       <!-- Footer -->
 
-      <footer id="footer" class="footer">     
+       <footer id="footer" class="footer">
         <div class="container">
           <div class="row-base row">
             <div class="col-base text-left-md col-md-4">
-              <a href="#" class="brand">
-                Story<span class="text-primary">X</span>
+              <a href="index.html">
+                <img alt="" class="img-responsive" src="img/logo.png">
               </a>
             </div>
             <div class="text-center-md col-base col-md-4">
-              <a href="https://www.story-x.co.uk/" class="author-link">
-                by StoryX
+              <a target="_blank" href="https://www.story-x.co.uk/" class="author-link">
+                Website by StoryX
               </a>
             </div>
             <div class="text-right-md col-base col-md-4">
-               © StoryX 2024. All Rights Reserved.
+              © ADCarpentry & Construction Ltd 2024. All Rights Reserved.
             </div>
           </div>
         </div>
@@ -330,16 +315,32 @@
     </div>
   </div>
 
-<!-- SCRIPTS -->
+  <!-- SCRIPTS -->
 
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/smoothscroll.js"></script>
-<script src="js/jquery.validate.min.js"></script>
-<script src="js/wow.min.js"></script>
-<script src="js/jquery.stellar.min.js"></script>
-<script src="js/jquery.magnific-popup.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/interface.js"></script> 
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/smoothscroll.js"></script>
+  <script src="js/jquery.validate.min.js"></script>
+  <script src="js/wow.min.js"></script>
+  <script src="js/jquery.stellar.min.js"></script>
+  <script src="js/jquery.magnific-popup.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+
+  <!-- SLIDER REVOLUTION -->
+  <script src="js/revolution/jquery.themepunch.tools.min.js"></script>
+  <script src="js/revolution/jquery.themepunch.revolution.min.js"></script>
+
+  <!-- SLIDER REVOLUTION 5.0 EXTENSIONS   -->
+  <script src="js/revolution/extensions/revolution.extension.actions.min.js"></script>
+  <script src="js/revolution/extensions/revolution.extension.carousel.min.js"></script>
+  <script src="js/revolution/extensions/revolution.extension.kenburn.min.js"></script>
+  <script src="js/revolution/extensions/revolution.extension.layeranimation.min.js"></script>
+  <script src="js/revolution/extensions/revolution.extension.migration.min.js"></script>
+  <script src="js/revolution/extensions/revolution.extension.navigation.min.js"></script>
+  <script src="js/revolution/extensions/revolution.extension.parallax.min.js"></script>
+  <script src="js/revolution/extensions/revolution.extension.slideanims.min.js"></script>
+  <script src="js/revolution/extensions/revolution.extension.video.min.js"></script>
+  <script src="js/interface.js"></script>
 </body>
+
 </html>
