--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         <div class="section-content">
           <div class="projects-carousel js-projects-carousel js-projects-gallery">
             <div class="project project-light">
-              <a href="img/projects/1-480x880.jpg" title="project 1">
+              <a href=“projects.html” title="project 1">
                 <figure>
                   <img alt="" src="img/projects/1-480x880.jpg">
                   <figcaption>
@@ -391,7 +391,7 @@
                       Residential care<br> project in Paris
                     </h3>
                     <h4 class="project-category">
-                      Architecture
+                      Kitchens
                     </h4>
                     <div class="project-zoom"></div>
                   </figcaption>
