--- a/light/index.html
+++ b/light/index.html
@@ -456,7 +456,7 @@
         <div class="section-content">
           <div class="projects-carousel js-projects-carousel js-projects-gallery">
             <div class="project project-light">
-              <a href="img/projects/1-480x880.jpg" title="project 1">
+              <a href=“projects.html” title="project 1">
                 <figure>
                   <img alt="" src="img/projects/1-480x880.jpg">
                   <figcaption>
