--- a/projects.html
+++ b/projects.html
@@ -189,7 +189,7 @@
         <div class="js-projects-gallery">
           <div class="row">
             <div class="project project-light col-sm-6 col-md-4 col-lg-3">
-              <a href="img/projects/1-480x880.jpg" title="Residential care project in Paris">
+              <a href=“projects.html” title="Residential care project in Paris">
                 <figure>
                   <img alt="" src="img/projects/1-480x880.jpg">
                   <figcaption>
