--- a/services.html
+++ b/services.html
@@ -190,8 +190,8 @@
           <article class="blog">
             <div class="row">
               <div class="blog-thumbnail col-md-8">
-                <div class="blog-thumbnail-bg col-md-8 visible-md visible-lg" style="background-image: url(img/blog/1-760x514.jpg);"></div>
-                <div class="blog-thumbnail-img visible-xs visible-sm"><img alt="" class="img-responsive" src="img/blog/1-760x514.jpg"></div>
+                <div class="blog-thumbnail-bg col-md-8 visible-md visible-lg" style="background-image: url(img/services/kitchens.jpg);"></div>
+                <div class="blog-thumbnail-img visible-xs visible-sm"><img alt="" class="img-responsive" src="img/services/kitchens.jpg"></div>
               </div>
               <div class="blog-info col-md-4">
                 <h3 class="blog-title">
@@ -210,8 +210,8 @@
           <article class="blog">
             <div class="row">
               <div class="blog-thumbnail col-md-8">
-                <div class="blog-thumbnail-bg col-md-8 visible-md visible-lg" style="background-image: url(img/blog/1-760x514.jpg);"></div>
-                <div class="blog-thumbnail-img visible-xs visible-sm"><img alt="" class="img-responsive" src="img/blog/1-760x514.jpg"></div>
+                <div class="blog-thumbnail-bg col-md-8 visible-md visible-lg" style="background-image: url(img/services/extensions.jpg);"></div>
+                <div class="blog-thumbnail-img visible-xs visible-sm"><img alt="" class="img-responsive" src="img/services/extensions.jpg"></div>
               </div>
               <div class="blog-info col-md-4">
                 <h3 class="blog-title">
@@ -227,8 +227,25 @@
           <article class="blog">
             <div class="row">
               <div class="blog-thumbnail col-md-8">
-                <div class="blog-thumbnail-bg col-md-8 visible-md visible-lg" style="background-image: url(img/blog/1-760x514.jpg);"></div>
-                <div class="blog-thumbnail-img visible-xs visible-sm"><img alt="" class="img-responsive" src="img/blog/1-760x514.jpg"></div>
+                <div class="blog-thumbnail-bg col-md-8 visible-md visible-lg" style="background-image: url(img/services/new_builds.jpg);"></div>
+                <div class="blog-thumbnail-img visible-xs visible-sm"><img alt="" class="img-responsive" src="img/services/new_builds.jpg"></div>
+              </div>
+              <div class="blog-info col-md-4">
+                <h3 class="blog-title">
+                  <a href="">New builds</a>
+                </h3>
+                <p>Elevate your living space with ADC's seamless extensions, meticulously crafted to blend functionality and aesthetics, transforming your property into a masterpiece.</p>
+                <div class="text-right"><a href="extentions.html" class="read-more">Learn more</a></div>
+              </div>
+              
+            </div>
+          </article>
+
+          <article class="blog">
+            <div class="row">
+              <div class="blog-thumbnail col-md-8">
+                <div class="blog-thumbnail-bg col-md-8 visible-md visible-lg" style="background-image: url(img/services/windows.jpg);"></div>
+                <div class="blog-thumbnail-img visible-xs visible-sm"><img alt="" class="img-responsive" src="img/services/windows.jpg"></div>
               </div>
               <div class="blog-info col-md-4">
                 <h3 class="blog-title">
@@ -244,8 +261,8 @@
           <article class="blog">
             <div class="row">
               <div class="blog-thumbnail col-md-8">
-                <div class="blog-thumbnail-bg col-md-8 visible-md visible-lg" style="background-image: url(img/blog/1-760x514.jpg);"></div>
-                <div class="blog-thumbnail-img visible-xs visible-sm"><img alt="" class="img-responsive" src="img/blog/1-760x514.jpg"></div>
+                <div class="blog-thumbnail-bg col-md-8 visible-md visible-lg" style="background-image: url(img/services/bathrooms.jpg);"></div>
+                <div class="blog-thumbnail-img visible-xs visible-sm"><img alt="" class="img-responsive" src="img/services/bathrooms.jpg"></div>
               </div>
               <div class="blog-info col-md-4">
                 <h3 class="blog-title">
@@ -261,8 +278,8 @@
           <article class="blog">
             <div class="row">
               <div class="blog-thumbnail col-md-8">
-                <div class="blog-thumbnail-bg col-md-8 visible-md visible-lg" style="background-image: url(img/blog/1-760x514.jpg);"></div>
-                <div class="blog-thumbnail-img visible-xs visible-sm"><img alt="" class="img-responsive" src="img/blog/1-760x514.jpg"></div>
+                <div class="blog-thumbnail-bg col-md-8 visible-md visible-lg" style="background-image: url(img/services/carpentry.jpg);"></div>
+                <div class="blog-thumbnail-img visible-xs visible-sm"><img alt="" class="img-responsive" src="img/services/carpentry.jpg"></div>
               </div>
               <div class="blog-info col-md-4">
                 <h3 class="blog-title">
@@ -278,8 +295,8 @@
           <article class="blog">
             <div class="row">
               <div class="blog-thumbnail col-md-8">
-                <div class="blog-thumbnail-bg col-md-8 visible-md visible-lg" style="background-image: url(img/blog/1-760x514.jpg);"></div>
-                <div class="blog-thumbnail-img visible-xs visible-sm"><img alt="" class="img-responsive" src="img/blog/1-760x514.jpg"></div>
+                <div class="blog-thumbnail-bg col-md-8 visible-md visible-lg" style="background-image: url(img/services/renovations.jpg);"></div>
+                <div class="blog-thumbnail-img visible-xs visible-sm"><img alt="" class="img-responsive" src="img/services/renovations.jpg"></div>
               </div>
               <div class="blog-info col-md-4">
                 <h3 class="blog-title">
@@ -296,8 +313,8 @@
           <article class="blog">
             <div class="row">
               <div class="blog-thumbnail col-md-8">
-                <div class="blog-thumbnail-bg col-md-8 visible-md visible-lg" style="background-image: url(img/blog/1-760x514.jpg);"></div>
-                <div class="blog-thumbnail-img visible-xs visible-sm"><img alt="" class="img-responsive" src="img/blog/1-760x514.jpg"></div>
+                <div class="blog-thumbnail-bg col-md-8 visible-md visible-lg" style="background-image: url(img/services/new_builds.jpg);"></div>
+                <div class="blog-thumbnail-img visible-xs visible-sm"><img alt="" class="img-responsive" src="img/services/new_builds.jpg"></div>
               </div>
               <div class="blog-info col-md-4">
                 <h3 class="blog-title">
@@ -315,8 +332,8 @@
           <article class="blog">
             <div class="row">
               <div class="blog-thumbnail col-md-8">
-                <div class="blog-thumbnail-bg col-md-8 visible-md visible-lg" style="background-image: url(img/blog/1-760x514.jpg);"></div>
-                <div class="blog-thumbnail-img visible-xs visible-sm"><img alt="" class="img-responsive" src="img/blog/1-760x514.jpg"></div>
+                <div class="blog-thumbnail-bg col-md-8 visible-md visible-lg" style="background-image: url(img/services/garden.jpg);"></div>
+                <div class="blog-thumbnail-img visible-xs visible-sm"><img alt="" class="img-responsive" src="img/services/garden.jpg"></div>
               </div>
               <div class="blog-info col-md-4">
                 <h3 class="blog-title">
