--- a/carpentary.html
+++ b/carpentary.html
@@ -52,7 +52,7 @@
   <header id="top" class="header-home">
     <div class="brand-panel">
       <a href="index.html">
-        <img alt="" class="img-responsive" src="img/logo.png">
+        <img alt="" class="img-responsive" src="img/logo.svg">
       </a>
       <div class="brand-name">ADC</div>
       <div class="slide-number">
@@ -79,7 +79,7 @@
     <nav class="navbar-desctop visible-md visible-lg">
       <div class="container">
         <a href="index.html">
-          <img alt="" class="brand js-target-scroll" src="img/logo_sm.png">
+          <img alt="" class="brand js-target-scroll" src="img/logo_sm.svg">
         </a>
         <ul class="navbar-desctop-menu">
            <li>
@@ -110,7 +110,7 @@
 
     <nav class="navbar-mobile">
       <a href="index.html">
-        <img alt="" class="img-responsive" src="img/logo.png">
+        <img alt="" class="img-responsive" src="img/logo.svg">
       </a>
 
       <!-- Navbar Collapse -->
@@ -245,7 +245,7 @@
           <div class="row-base row">
             <div class="col-base text-left-md col-md-4">
               <a href="index.html">
-                <img alt="" class="img-responsive" src="img/logo.png">
+                <img alt="" class="img-responsive" src="img/logo.svg">
               </a>
             </div>
             <div class="text-center-md col-base col-md-4">
