--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <sup><span class="delimiter">/</span> 0<span class="total-count"></span></sup>
       </div>
     </div>
-    <div class="header-phone">07540 544126</div>
+    <a href="tel:07540544126" class="header-phone">07540 544126</a>
     <div class="vertical-panel desktop-only"></div>
     <div class="vertical-panel-content desktop-only">
       <div class="vertical-panel-info">
