--- a/extentions.html
+++ b/extentions.html
@@ -6,6 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ADCarpentry & Construction Ltd</title>
 
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="ADCarpentry & Construction is a leading local carpenter and builder in Bodmin Cornwall. We specialize in new builds, renovations, extensions, kitchens & bathrooms">
+  <meta name="keywords" content="carpentry, construction, builder, renovations, newbuilds, new builds, homes, kitchens, bathrooms, extensions, plastering, tiling, Bodmin, Cornwall">
+
+  <!-- Social Sharing Image -->
+  <meta property="og:title" content="ADCarpentry & Construction Ltd - Leading Local Carpenter and Builder in Bodmin Cornwall">
+  <meta property="og:description" content="ADCarpentry & Construction is a leading local carpenter and builder in Bodmin Cornwall. We specialize in renovations, new builds, extensions, plastering, and tiling.">
+  <meta property="og:image" content="img/facebook.jpg">
+  <meta property="og:url" content="https://ad-carpentry.com/">
+
   <!-- Favicons -->
   <link rel="shortcut icon" href="favicon.png">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
