--- a/contacts.html
+++ b/contacts.html
@@ -215,7 +215,7 @@
               <div class="contact-body">
                 <h4>Email</h4>
                 <div class="contact-content">
-                  info@adcarpentry-construction-ltd.co.uk</div>
+                  adawe43@gmail.com</div>
               </div>
             </div>
             <div class="contact-row">
@@ -242,7 +242,7 @@
             <div class="row-base row">
               <div class="col-address col-base col-md-4">
                 07540 544126<br>
-                info@adcarpentry-construction-ltd.co.uk<br>
+                adawe43@gmail.com<br>
                 52 Foster Drive, Bodmin, Cornwall, PL31 1PS
               </div>
               <div class="col-base  col-md-8">
