--- a/projects.html
+++ b/projects.html
@@ -65,12 +65,12 @@
         <img alt="" class="img-responsive" src="img/logo.svg">
       </a>
       <div class="brand-name">ADC</div>
-      <div class="slide-number">
-        <span class="current-number text-primary">0<span class="count">1</span></span>
+      <!-- <div class="slide-number">
+        <span class="current-number text-primary">0<span class="count">12</span></span>
         <sup><span class="delimiter">/</span> 0<span class="total-count"></span></sup>
-      </div>
+      </div> -->
     </div>
-    <a href="tel:07540544126" class="header-phone">07540 544126</a>
+    <!-- <a href="tel:07540544126" class="header-phone">07540 544126</a>
     <div class="vertical-panel desktop-only"></div>
     <div class="vertical-panel-content desktop-only">
       <div class="vertical-panel-info">
@@ -82,7 +82,7 @@
        
         <li><a target="_blank" href="https://www.instagram.com/adcarpentry_and_construction/profilecard/?igsh=MWE0N2FmbHlvemlteQ==" class="fa fa-facebook"></a></li>
       </ul>
-    </div>
+    </div> -->
 
     <!-- Navigation Desctop -->
 
@@ -199,9 +199,25 @@
         <div class="js-projects-gallery">
           <div class="row">
             <div class="project project-light col-sm-6 col-md-4 col-lg-3">
-              <a href=“projects.html” title="New Build in Cardinham">
+              <a href=“cladding.html” title="Cladding in St Columb">
                 <figure>
-                  <img alt="" src="img/projects/1-480x880.jpg">
+                  <img alt="" src="img/projects/cladding.jpg">
+                  <figcaption>
+                    <h3 class="project-title">
+                      St Columb
+                    </h3>
+                    <h4 class="project-category">
+                      Cladding
+                    </h4>
+                    <div class="project-zoom"></div>
+                  </figcaption>
+                </figure>
+              </a>
+            </div>
+            <div class="project project-light col-sm-6 col-md-4 col-lg-3">
+              <a href=“timber-new-build.html” title="New Build in Cardinham">
+                <figure>
+                  <img alt="" src="img/projects/cardinham.jpg">
                   <figcaption>
                     <h3 class="project-title">
                       Cardinham
@@ -355,7 +371,7 @@
               </a>
             </div>
             <div class="text-right-md col-base col-md-4">
-              © ADCarpentry & Construction Ltd 2024. All Rights Reserved.
+              © ADCarpentry & Construction Ltd 2025. All Rights Reserved.
             </div>
           </div>
         </div>
