--- a/index.html
+++ b/index.html
@@ -331,6 +331,11 @@
 
     <div class="content">
 
+
+      <!-- About  -->
+
+      
+
       <!-- About  -->
 
       <section id="about" class="about section">
@@ -501,6 +506,46 @@
         </div>
       </section>
 
+
+      <section id="about" class="about section">
+        <div class="container">
+          <header class="section-header">
+            <h2 class="section-title">Our <span class="text-primary">Latest Projects</span></h2>
+            <strong class="fade-title-left">Projects</strong>
+          </header>
+          <div class="section-content">
+            <div class="row-base row">
+              <div class="col-base col-sm-6 col-md-4">
+                <h3 class="col-about-title">Our Biggest Project Yet<span class="text-primary">.</span></h3>
+                <div class="col-about-info">
+                  <p>A Stunning Timber-Built Family Home. In 2023, ADCarpentry proudly embarked on its largest project to date, a bespoke new build in the heart of Cornwall.</p>
+                  <a href="timber-new-build.html">View Project</a>
+                </div>
+              </div>
+              <div class="col-base col-about-spec col-sm-6 col-md-4">
+                <h3 class="col-about-title">About<span class="text-primary">:</span></h3>
+                <div class="service-item">
+                  
+                  <h4>New Build</h4>
+                </div>
+                <div class="service-item">
+                  <!-- <img alt="" width="58" src="img/img-icon/icon-interiors.png"> -->
+                  <h4>Timber Built</h4>
+                </div>
+                <div class="service-item">
+                  <!-- <img alt="" width="58" src="img/img-icon/icon-planing.png"> -->
+                  <h4>Cardinham</h4>
+                </div>
+              </div>
+              <div class="clearfix visible-sm"></div>
+              <div class="col-base col-about-img col-sm-6 col-md-4">
+                <img alt="" class="img-responsive" src="img/projects/homepage.webp">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- Experience -->
 
       <section class="experience section">
@@ -634,7 +679,7 @@
               </a>
             </div>
             <div class="text-right-md col-base col-md-4">
-              © ADCarpentry & Construction Ltd 2024. All Rights Reserved.
+              © ADCarpentry & Construction Ltd 2025. All Rights Reserved.
             </div>
           </div>
         </div>
